	needed in R 2.13.0 and should be released soon (there is no need
	to add R >= 2.13.0 dependence as long as we do not use these
	functions ourselves within released vegan code).

	* treeheight: dramatic simplification and speed-up of the code.

	* scores.cca/rda: failed if user requested only non-existing
	scores. Now return an empty list of scores instead (with possible
	attributes). 
	
Version 1.18-29 (closed April 27, 2011)

	* capscale: could fail with add = TRUE in R 2.13.0. A kluge was
	necessary in cmdscale() pre 2.13.0, but the feature was fixed in R
	2.13.0 and unnecessary fix failed. Now the kluge is used only in
	older versions of R and capscale should be working both in 2.13.0
	and older R.

	* adipart.Rd, multipart.Rd: cancelled some excessive speed-ups in
	example code made in r1204. Some of these speed-ups never made to
	the release version, but were only made in the devel branch. The
	sped-up examples were also merged to the release (adipart.Rd,
	kendall.global.Rd, multipart.Rd, mantel.correlog.Rd,
	pertmatfull.Rd, radfit.Rd). Also reverted r1224 so that
	Guillaume's original r1206 (49 permutations instead of 99) is used
	again. Probably we should speed up some other examples. The five
	worst cases (timing in MacBook Air) are: ordistep (19.0 sec),
	add1.cca (7.2 sec), tsallis (7.0 sec), prc (5.6 sec),
	vegan-package (5.2 sec).

	* vegan-package.Rd, ordistep.Rd: speed up examples.
	
Version 1.18-28 (closed April 11, 2011)

	* Peter Minchin joined the vegan team.

	* monoMDS: a new function with Peter Minchin's Fortran90 code for
	NMDS. The full Fortran90 code has global, local, linear and hybrid
	MDS, configurable and valid tie treatment, handles missing values,
	and allows adding new points to existing ordinations. The Fortran
	code is highly tuned, and much faster than other alternatives in
	R. The R interfaces allows access to most features of the Fortan90
	code, except adding new points to the ordination (which will need